# UV_control_system

./: CMakeLists.txt  README.md  SeveROVBort.pro  cs_rov.cpp  cs_rov.h  main.cpp  rov_model.cpp  rov_model.h  uv_state.h  vectornavprotocol.h  vmacontroller.cpp  vmacontroller.h
include_vn100/: vectornavprotocol.h
include_vn100/linux/: vncp_services.c
include_vn100/windows/: vncp_services.c
logger/: logger.cpp  logger.h
pult_connection/: pultcontrolsystemprotocols.h  udp_protocol.h  uv_state.cpp  uv_state.h
sin_generation/: sin_generation.cpp  sin_generation.h
vectornav/: vectornavprotocol.cpp  vectornavprotocol.h
vma/: vmacontroller.cpp  vmacontroller.h
сам пульт/: kx_pult.conf  kx_pult.conf.autosave  session_KX_Pult.conf
